--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 		  <div class="navbar bg-white shadow-sm">
 		    <div class="container d-flex justify-content-between">
 		        <a href="/"><img src="/images/logo.svg"/>
-		        <a href="/new" class="btn btn-primary">New Post</a>
+		        <a href="/post/new" class="btn btn-primary">New Post</a>
 		    </div>
 		  </div>
 		</header>
